[gd_scene load_steps=22 format=2]

[ext_resource path="res://entities/player/Player.gd" type="Script" id=1]
[ext_resource path="res://entities/player/NukaBun.png" type="Texture" id=2]
[ext_resource path="res://entities/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://entities/player/states/Moving.gd" type="Script" id=4]
[ext_resource path="res://entities/bullet/PlayerBullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/player/FireBun.png" type="Texture" id=6]
[ext_resource path="res://entities/player/IceBun.png" type="Texture" id=7]
[ext_resource path="res://entities/player/states/EnteringRoom.gd" type="Script" id=8]
[ext_resource path="res://entities/player/states/Waiting.gd" type="Script" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 13.1033

[sub_resource type="CircleShape2D" id=2]
radius = 18.0

[sub_resource type="CircleShape2D" id=3]
radius = 10.231

[sub_resource type="CanvasItemMaterial" id=11]
blend_mode = 2

[sub_resource type="CanvasItemMaterial" id=10]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=12]
blend_mode = 2

[sub_resource type="Animation" id=4]
resource_name = "back_idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=8]
resource_name = "back_run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=5]
resource_name = "front_idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=9]
resource_name = "front_run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "left_idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=7]
resource_name = "left_run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 0
script = ExtResource( 1 )
BULLET_SCENE = ExtResource( 5 )
RED_SPRITE_TEXTURE = ExtResource( 6 )
GREEN_SPRITE_TEXTURE = ExtResource( 2 )
BLUE_SPRITE_TEXTURE = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.8695 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 8.0
margin_top = -11.9379
margin_right = 48.0
margin_bottom = 2.06213
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickupDetector" type="Area2D" parent="."]
position = Vector2( 0, -3 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupDetector"]
shape = SubResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
FIRST_STATE = NodePath("Moving")

[node name="EnteringRoom" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="MovingTime" type="Timer" parent="StateMachine/EnteringRoom"]
wait_time = 2.5

[node name="Waiting" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="IdleTime" type="Timer" parent="StateMachine/Waiting"]
wait_time = 0.5

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )
vframes = 6
hframes = 2
frame = 11

[node name="Hurtbox" type="Area2D" parent="."]
monitoring = false
collision_layer = 2
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, 4.54982 )
shape = SubResource( 3 )

[node name="HurtboxPolygon" type="Polygon2D" parent="Hurtbox/CollisionShape2D"]
visible = false
material = SubResource( 11 )
scale = Vector2( 1.01677, 1.01677 )
color = Color( 0.0901961, 0.156863, 0.392157, 1 )
polygon = PoolVector2Array( 0, 10, 7, 7, 10, 3, 10, -1, 8.7991, -5.47321, 4.79458, -8.39317, -0.0442123, -10.1451, -5.44218, -8.69476, -8.47039, -5.38978, -10.3058, -0.133847, -8.97095, 4.62152, -5.80071, 8.12547 )

[node name="Polygon2D" type="Polygon2D" parent="Hurtbox/CollisionShape2D/HurtboxPolygon"]
material = SubResource( 10 )
scale = Vector2( 0.894634, 0.894634 )
color = Color( 1, 0.447059, 0, 1 )
polygon = PoolVector2Array( 0, 10, 7, 7, 10, 3, 10, -1, 8.7991, -5.47321, 4.79458, -8.39317, -0.0442123, -10.1451, -5.44218, -8.69476, -8.47039, -5.38978, -10.3058, -0.133847, -8.97095, 4.62152, -5.80071, 8.12547 )

[node name="Polygon2D3" type="Polygon2D" parent="Hurtbox/CollisionShape2D/HurtboxPolygon"]
material = SubResource( 12 )
scale = Vector2( 0.763504, 0.763504 )
color = Color( 1, 0.690196, 0.294118, 1 )
polygon = PoolVector2Array( 0, 10, 7, 7, 10, 3, 10, -1, 8.7991, -5.47321, 4.79458, -8.39317, -0.0442123, -10.1451, -5.44218, -8.69476, -8.47039, -5.38978, -10.3058, -0.133847, -8.97095, 4.62152, -5.80071, 8.12547 )

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "front_idle"
anims/back_idle = SubResource( 4 )
anims/back_run = SubResource( 8 )
anims/front_idle = SubResource( 5 )
anims/front_run = SubResource( 9 )
anims/left_idle = SubResource( 6 )
anims/left_run = SubResource( 7 )
[connection signal="timeout" from="ShootCooldown" to="." method="_on_ShootCooldown_timeout"]
